# optician

./: CHANGELOG.md  README.md  Test.hs  optician.cabal  test-repl
.github/workflows/: ci.yml
src/: Optician.hs
src/Optician/: GhcFacade.hs  Inputs.hs  Internal.hs  Label.hs  Optics.hs  Rewrite.hs  Solve.hs  TypeErrors.hs  Types.hs
src/Optician/Rewrite/: GenTypeEqualities.hs  GetOpticKind.hs
src/Optician/Rewrite/GenTypeEqualities/: Lens.hs  Prism.hs
src/Optician/Solve/: Lens.hs  Prism.hs  Utils.hs
test/: Main.hs
type-error-test/: Main.hs
