cabal-version:      3.0
name:               optician
version:            0.1.0.0
synopsis:           GHC plugin for generating optics
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Optician,
                      Optician.Label,
                      Optician.Types
    other-modules: Optician.GhcFacade,
                   Optician.Inputs,
                   Optician.Rewrite,
                   Optician.Rewrite.GenTypeEqualities,
                   Optician.Rewrite.GenTypeEqualities.Lens,
                   Optician.Rewrite.GenTypeEqualities.Prism,
                   Optician.Rewrite.GetOpticKind,
                   Optician.Solve,
                   Optician.Solve.Lens,
                   Optician.Solve.Prism,
                   Optician.TypeErrors
    -- other-extensions:
    default-extensions: LambdaCase
    build-depends:    base >=4.17.0.0,
                      optics-core >= 0.4,
                      ghc-tcplugin-api >= 0.10,
                      ghc >= 9.4,
                      transformers
    hs-source-dirs:   src
    default-language: GHC2021

test-suite optician-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options: -fplugin Optician
    build-depends:
        base ^>=4.18.0.0,
        optician,
        optics-vl,
        optics >= 0.4.2,
        lens-properties,
        QuickCheck,
        tasty,
        tasty-quickcheck

test-suite optician-type-error-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   type-error-test
    main-is:          Main.hs
    ghc-options: -fplugin Optician
                 -fdefer-type-errors
    build-depends:
        base ^>=4.18.0.0,
        optician,
        optics,
        tasty,
        HUnit,
        tasty-hunit,
        text
